# hiroleague

./: .cursorignore  .gitignore  LICENSE  README.md  bash-startup.sh  dev-sync-fast.sh  dev-sync.sh  hiroleague.code-workspace  package-lock.json
designs/: logo.xcf  (+3 more)
hiroserver/channels/hiro-channel-devices/: README.md  pyproject.toml
hiroserver/channels/hiro-channel-devices/src/hiro_channel_devices/: main.py  plugin.py
hiroserver/channels/hiro-channel-echo/: README.md  pyproject.toml
hiroserver/channels/hiro-channel-echo/src/hiro_channel_echo/: main.py  plugin.py
hiroserver/gateway/: README.md  pyproject.toml
hiroserver/gateway/src/hirogateway/: autostart.py  constants.py  environment.py  instance.py  main.py  relay.py  service.py
hiroserver/gateway/tests/: test_environment.py
hiroserver/hiro-channel-sdk/: README.md  pyproject.toml
hiroserver/hiro-channel-sdk/src/hiro_channel_sdk/: __init__.py  base.py  constants.py  log_setup.py  models.py
hiroserver/hiro-channel-sdk/tests/: test_protocol_contract.py
hiroserver/hiro-commons/: README.md  pyproject.toml
hiroserver/hiro-commons/src/hiro_commons/: log.py  process.py
hiroserver/hiro-commons/src/hiro_commons/constants/: __init__.py  storage.py
hiroserver/hiro-commons/tests/: test_process.py
hiroserver/hirocli/: README.md  pyproject.toml
hiroserver/hirocli/src/hirocli/: __init__.py  autostart.py  constants.py  environment.py  qr_rendering.py  rpc_helpers.py
hiroserver/hirocli/src/hirocli/admin/: __init__.py  context.py  router.py  run.py  stubs.py
hiroserver/hirocli/src/hirocli/admin/features/: __init__.py
hiroserver/hirocli/src/hirocli/admin/features/agents/: __init__.py
hiroserver/hirocli/src/hirocli/admin/features/catalog/: __init__.py  components.py  controller.py  page.py  service.py
hiroserver/hirocli/src/hirocli/admin/features/channels/: __init__.py  components.py  controller.py  page.py  service.py
hiroserver/hirocli/src/hirocli/admin/features/characters/: __init__.py  components.py  controller.py  page.py  service.py  styles.py
hiroserver/hirocli/src/hirocli/admin/features/chat_channels/: __init__.py  components.py  controller.py  page.py  service.py
hiroserver/hirocli/src/hirocli/admin/features/dashboard/: __init__.py  components.py  page.py  service.py
hiroserver/hirocli/src/hirocli/admin/features/devices/: __init__.py  components.py  controller.py  page.py  service.py
hiroserver/hirocli/src/hirocli/admin/features/gateways/: __init__.py  components.py  controller.py  page.py  service.py
hiroserver/hirocli/src/hirocli/admin/features/logs/: __init__.py  components.py  controller.py  grid.py  page.py  service.py  styles.py
hiroserver/hirocli/src/hirocli/admin/features/metrics/: __init__.py  components.py  controller.py  page.py  service.py
hiroserver/hirocli/src/hirocli/admin/shared/: __init__.py  formatters.py  result.py  stderr_log.py  tab_nav.py  theme.py
hiroserver/hirocli/src/hirocli/admin/shell/: __init__.py  layout.py  navigation.py  workspace_service.py
hiroserver/hirocli/src/hirocli/admin/tests/: test_format_pricing_summary.py
hiroserver/hirocli/src/hirocli/admin_svelte/: __init__.py  api.py  static_server.py
hiroserver/hirocli/src/hirocli/catalog_data/: __init__.py  catalog.yaml
hiroserver/hirocli/src/hirocli/characters/hiro/: backstory.md  character.json  prompt.md
hiroserver/hirocli/src/hirocli/commands/: __init__.py  app.py  catalog.py  channel.py  character.py  device.py  logs.py  metrics.py  provider.py  root.py  workspace.py
hiroserver/hirocli/src/hirocli/domain/: __init__.py  agent_config.py  available_models.py  channel_config.py  character.py  config.py  conversation_channel.py  credential_store.py  data_store.py  db.py  media_store.py  message_store.py  model_catalog.py  model_factory.py  onboarding_defaults.py  pairing.py  preferences.py  server_info.py  workspace.py
hiroserver/hirocli/src/hirocli/domain/tests/: test_available_models.py  test_character.py  test_conversation_channel.py  test_credential_store.py  test_model_catalog.py  test_model_factory.py  test_onboarding_defaults.py  test_phase2b_helpers.py  test_preferences.py
hiroserver/hirocli/src/hirocli/runtime/: __init__.py  agent_manager.py  asgi.py  channel_event_handler.py  channel_manager.py  comm_log.py  communication_manager.py  device_targeting.py  envelope_factory.py  event_handler.py  http_server.py  inbound_pipeline.py  infra_event_handlers.py  message_adapter.py  message_flow.py  outbound_pipeline.py  outbound_sink.py  post_adapt_hooks.py  request_handler.py  request_methods.py  resource_change_broadcaster.py  resource_registry.py  resource_versioning.py  server_context.py  server_info_broadcaster.py  server_process.py  summarizing_agent_graph.py
hiroserver/hirocli/src/hirocli/runtime/adapters/: __init__.py  audio_adapter.py  image_adapter.py
hiroserver/hirocli/src/hirocli/runtime/tests/: test_agent_manager.py  test_asgi.py  test_http_character_profiles.py  test_resource_change_broadcaster.py  test_resource_registry.py  test_resource_versioning.py
hiroserver/hirocli/src/hirocli/services/: __init__.py  transcription_service.py  vision_service.py
hiroserver/hirocli/src/hirocli/services/metrics/: __init__.py  collector.py  models.py
hiroserver/hirocli/src/hirocli/services/stt/: __init__.py  gemini_provider.py  openai_provider.py  provider.py  service.py
hiroserver/hirocli/src/hirocli/services/tts/: __init__.py  gemini_provider.py  openai_provider.py  provider.py  service.py
hiroserver/hirocli/src/hirocli/tools/: __init__.py  base.py  character.py  conversation.py  langchain_adapter.py  llm_catalog.py  logs.py  media.py  policy.py  provider.py  registry.py  server.py  server_control.py  server_info.py  server_models.py  workspace.py
hiroserver/hirocli/src/hirocli/ui/: app.py  run.py
hiroserver/hirocli/src/hirocli/ui/pages/: agents.py  logs.py  logs_controller.py  logs_detail.py  logs_filters.py  logs_grid.py  logs_styles.py  metrics.py  workspaces.py
hiroserver/hirocli/tests/: test_environment.py
hiroserver/hiroleague/: README.md  pyproject.toml
(+402 files in other folders)
