[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hirogate"
version = "0.1.1"
description = "WebSocket relay gateway server for Hiro-League"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Michel Habib", email = "michelhabib@gmail.com" },
]

keywords = ["home", "server", "websocket", "gateway", "relay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "websockets>=12",
    "pydantic>=2",
    "platformdirs>=4",
    "typer>=0.12",
    "rich>=13",
    "cryptography>=43",
    "hiro-channel-sdk~=0.1.1",
    "hiro-commons~=0.1.1",
]

[project.urls]
Homepage = "https://www.hiroleague.com"
Documentation = "https://docs.hiroleague.com"
Repository = "https://github.com/hiro-league/hiroleague"
Issues = "https://github.com/hiro-league/hiroleague/issues"

[project.scripts]
hirogate = "hirogateway.main:cli"

[tool.uv.sources]
hiro-channel-sdk = { workspace = true }
hiro-commons = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/hirogateway"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
