[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hiro-channel-sdk"
version = "0.1.1"
description = "SDK for building channel plugins for Hiro-League"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Michel Habib", email = "michelhabib@gmail.com" },
]

keywords = ["home", "server", "websocket", "plugin", "channel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic>=2",
    "websockets>=12",
    "hiro-commons~=0.1.1",
]

[project.urls]
Homepage = "https://www.hiroleague.com"
Documentation = "https://docs.hiroleague.com"
Repository = "https://github.com/hiro-league/hiroleague"
Issues = "https://github.com/hiro-league/hiroleague/issues"

[tool.uv.sources]
hiro-commons = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/hiro_channel_sdk"]

[dependency-groups]
dev = [
    "jsonschema>=4.23",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
