[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hiroleague"
version = "0.1.0"
description = "Hiro - desktop server CLI with WebSocket gateway client"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["home", "server", "websocket", "gateway", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12",
    "pydantic>=2",
    "pyyaml>=6.0.3",
    "rich>=13",
    "cryptography>=43",
    "openai>=2.0",
    "google-genai>=1.66",
    "lameenc>=1.8.2",
    "langchain>=1.0",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-openai>=0.3",
    "langchain-anthropic>=1.4",
    "langchain-google-genai>=4.2",
    "langchain-ollama>=1.0.1",
    "langchain-community>=0.3",
    "keyring>=25.7",
    "platformdirs>=4",
    "aiosqlite>=0.20",
    "sqlmodel>=0.0.21",
    "nicegui>=3.0",
    "qrcode>=8.0",
    "psutil>=7.0",
    "hiro-channel-sdk",
    "hiro-commons",
    "hiro-channel-devices",
    "hirogateway",
    "langmem>=0.0.30",
]

[project.scripts]
hiro = "hirocli.commands.app:app"
hiro-channel-devices = "hiro_channel_devices.main:app"

[tool.uv.sources]
hiro-channel-sdk = { workspace = true }
hiro-commons = { workspace = true }
hiro-channel-devices = { workspace = true }
hirogateway = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/hirocli"]
artifacts = ["src/hirocli/admin_svelte/static/**"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

# Many admin feature tests use the same basename (test_service.py); importlib mode
# gives each file a unique import path and avoids "import file mismatch" on collection.
[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
